# bucket-search

./: .gitignore  BUILD_TEST_REPORT.md  CLAUDE.md  Cargo.toml  PLAN.md  README.md  bucket_search.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
benches/: pointbin_bench.rs
python/bucket_search/: __init__.py
src/: lib.rs  pointbin.rs  python_bindings.rs  utils.rs
tests/: integration_test.rs  test_python.py
